# graphplot

./: .gitignore  Cargo.toml  README.md
examples/: graph.rs
src/: config.rs  edge.rs  lib.rs  multigraph.rs  node.rs  options.rs  style.rs  subgraph.rs
src/extras/: nodes.rs
src/style/: edgestyle.rs  graphstyle.rs  nodestyle.rs
styles/: dark.json  light.json
