[package]
name = "graphplot"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/sixalphaone/graphplot"
keywords = ["plot", "plotting", "graph", "multigraph", "networks"]
categories = ["visualization", "algorithms", "data structures", "mathematics", "graphics"]

[dependencies]
anyhow = "1.0"
serde_json = "1.0"

serde = { version = "1.0", features = ["derive"] }
ureq = { version = "3.1", features = ["json"] }
